--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,18 @@ p{font-family: 'Lato', sans-serif;}
 
 .navbar-brand span{
   font-family: 'Lato', sans-serif;
-  font-size: 1.3em;
+  font-size: 20px;
 }
 
 
 .nav-link {
   display: inline;
-  font-size: 1.5em;
+  font-size: 20px;
   font-family: 'Lato', sans-serif;
   color: black;
 }
 
-.nav-item {font-size: 16px;
+.nav-item {font-size: 20px;
   font-family: 'Lato', sans-serif;
   color: black;
 }
@@ -64,7 +64,7 @@ p{font-family: 'Lato', sans-serif;}
     color: #fff;
 }
 
-/* Footer section styles */
+/* Footer sectionp styles */
 
 #footer-logos {display: inline;
 float: right;
