Updates to the contact us section to pass validation.  I refactored the form

--- a/css/style.css
+++ b/css/style.css
@@ -54,24 +54,14 @@ p{font-family: 'Lato', sans-serif;}
     width: 100%;
     min-height: 80vh;}
  
-
-    body{
-        background-color: #fff;
-        font-family: 'Roboto', sans-serif;
-        display: flex;
-        align-items:center;
-        justify-content: center;
-        min-height: 100 vh;
-    }
     
-    .container{
-        background-color: #faf3f3;
-        border-radius: 5px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-        width: 400px;
-    }    
 
-form{ padding: 50px 50px;
+form{ 
+    align-items: center;
+    padding: 20px 20px;
+    border-radius: 5px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+        
     }    
 /* Welcome message on home page */
 
