--- a/css/style.css
+++ b/css/style.css
@@ -51,15 +51,14 @@ p{font-family: 'Lato', sans-serif;}
 }
 
 .hero-home {
-    position: absolute;
+    
     background-image: url("../images/laddermedium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     min-height: 80vh;
-    transform: translate(-50%, -50%)}
- 
+}
     
 
 form{ 
