--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,9 @@ p{font-family: 'Lato', sans-serif;}
   color: black;
 }
 
+/* home hero styling */
 .hero-home {
-    
+   
     background-image: url("../images/laddermedium.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -61,13 +62,6 @@ p{font-family: 'Lato', sans-serif;}
 }
     
 
-form{ 
-    align-items: center;
-    padding: 20px 20px;
-    border-radius: 5px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-        
-    }    
 /* Welcome message on home page */
 
 p.home-spacing{
@@ -80,7 +74,12 @@ p.home-spacing{
     color: #fff;
 }
 
-/* Footer sectionp styles */
+.home-page-services img{
+    padding: 10px;
+
+}
+
+/* Footer section styles */
 
 #footer-logos {display: inline;
 float: right;
@@ -106,12 +105,16 @@ margin-right: 50px}
     font-size: 1em;}
 
 .text-services-section p{
-    font-size: 0.8em; 
+    
     text-align: left;}
 
 label {
     font-size: 1.5em;}
 
+.about-me img{
 
+    margin-top: 5px;
+    padding: 0%;
+}
 
 
