--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 /* Imported styles */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
-
-
 /* Global styles */
-
 * {
-    margin: 0px;;
+    margin: 0;
     padding:0;
     border:0;
 }
@@ -13,41 +10,27 @@ body{
     font-family:Lato, sans-serif;
     font-size: 1rem;
 }
-
 h1, h2 {font-family: 'Lato', sans-serif;
     
-
 }
-
-
-
 p{font-family: 'Lato', sans-serif;}
-
-
-
 /* Navigation styles */
-
 .navbar-brand span{
   font-family: 'Lato', sans-serif;
   font-size: 30px;
 }
-
-
 .nav-link {
   display: inline;
   font-size: 20px;
   font-family: 'Lato', sans-serif;
   color: black;
 }
-
 .nav-item {font-size: 20px;
   font-family: 'Lato', sans-serif;
   color: black;
 }
-
 /* home hero styling */
 .hero-home {
-   
     background-image: url("../images/laddermedium.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -55,12 +38,8 @@ p{font-family: 'Lato', sans-serif;}
     width: 100%;
     min-height: 80vh;
 }
-    
-
 /* Welcome message on home page */
-
 p.home-spacing{
-    
     margin-top: 100px;
     margin-left: 140px;
     margin-right:   60px;
@@ -68,28 +47,20 @@ p.home-spacing{
     font-weight: 700;
     color: #fff;
 }
-
 .home-page-services img{
     padding: 10px;
-
 }
-
 /* Footer section styles */
-
-#footer-logos {display: inline;
-float: right;
-margin-right: 50px}
-
-
-.footer-text-style{font-size: 0.8em;}
-
+#footer-logos {
+    display: inline;
+    float: right;
+    margin-right: 50px;
+}
+.footer-text-style {
+    font-size: 0.8em;
+}
 .social-media-icons a{font-size: 2em;
     margin: 0 10px 0 0;
     color: #000000;
     text-decoration: none;   
 }
-
-
-
-
-
